Fixed stretched preview images on home page

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
 
 .preview {
     display: flex;
-    max-width: 777px;
+    max-width: 50%;
     max-height: 120px;
     margin: 40px auto;
     color: #eeeeee;
@@ -82,8 +82,10 @@ body{
 }
 
 .preview img{
+    object-fit: cover;
     display: block;
-    max-width: 35%;
+    max-width: 300px;
+    maxheight: 300px;
     margin-right: 20px;
     border-radius: 6px;
 }
